dev/test_programs/INVALID/group5/scanner_literal_interpreted_invalid_escape.go
package scanner_literal_interpreted_invalid_escape

var r string = "\z"

